tests/baselines/reference/noImplicitAnyInBareInterface.errors.txt
==== tests/cases/compiler/noImplicitAnyInBareInterface.ts (2 errors) ====
    
    interface Entry {
        // Should return error for implicit any on `new` and `foo`.
        new ();
        ~~~~~~
!!! noImplicitAnyInBareInterface.ts(4,5): error TS7013: Constructor signature, which lacks return-type annotation, implicitly has an 'any' return type.
        few() : any;
        foo();
        ~~~~~
!!! noImplicitAnyInBareInterface.ts(6,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    }